chore(vvd-foundation): layout style color changes (#1055)
* chore(workspace): update mwc version to 0.22.1

* initial commit

* Chip component (wip)

* added varying size padding

* added enumerations

* removed comments

* added readme

* added stories

* update style

* contrast in layout

* partial design match

* build(workspace): align dependencies versions

* unrelated package

* typo

* typo

* wrong dep

* revert

* revert

* revert

* revert

* revert

* typo

* filter chip

* filter progress

* correct style

* selected behavior ok

* chip selected

* transition

* button is of type button

* try elevation

* duotone layout

* support outlined in badge

* refactor(vvd-foundation): harden fallback style of connotation

* no need of value

* remove duplicate selector

* extract template

* story suggestion

* remove index.html

* fixed compound

* fixed compound

* fixed compound

* refactoring connotation

* vwc-text pass

* badge & text updated

* note, snackbar, switch

* banner, button

* circular-progress, chip

* chip, icon-button

* irrelevant chip, list-item

* context

* refactoring

* typos

* updates

* update

* snackbar ui snapshot

* fix stories

* revert duotone

* align with new connotation

* premature accent shade

* rename variables

* update deps versions

* rename chips to tags, ui-tests

* refactor(vvd-foundation): layout to mixin convention

* layout refactored

* layout aligned

* refactored layout

* experimental

* refactored layout

* update button & icon-button

* button refactor

* typos in icon-button

* annotate types

* typo

* mixin subcategory

* all aligned

* differentiate configs names

* refactor(vwc-icon-button-toggle): decouple component

* connotation typo

* snapshot changed

* fixed tests

* restyle toggle group

* Update components/icon-button/src/vwc-icon

--- a/common/foundation/scss/mixins/layout/_mixins.scss
+++ b/common/foundation/scss/mixins/layout/_mixins.scss
@@ -1,4 +1,3 @@
-@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '../connotation' as connotation;
 @use '../../functions' as functions;
 @use 'variables' as variables;
@@ -24,13 +23,17 @@ $all-layouts: (
 
 %outlined {
 	#{variables.$vvd-layout-color-fill}: transparent;
-	#{variables.$vvd-layout-color-outline}: 1px solid var(#{connotation.$vvd-color-connotation});
-	#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation});
+	#{variables.$vvd-layout-color-outline}: var(#{connotation.$vvd-color-connotation});
+	@if (config.$outline-duotone) {
+		#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation}-contrast);
+	} @else {
+		#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation}-diverse);
+	}
 }
 
 %soft {
 	#{variables.$vvd-layout-color-fill}: var(#{connotation.$vvd-color-connotation}-soft);
-	#{variables.$vvd-layout-color-text}: var(#{scheme-variables.$vvd-color-on-canvas});
+	#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation}-contrast);
 }
 
 %text,
