--- a/common/scheme/src/scheme.light.scss
+++ b/common/scheme/src/scheme.light.scss
@@ -18,6 +18,7 @@
 	--vvd-scheme-elevation-dp-24-box-shadow: 0 12px 16px rgba(0, 0, 0, 0.05), 0 24px 32px rgba(0, 0, 0, 0.05), 0 12px 48px rgba(0, 0, 0, 0.2);
 	--vvd-scheme-elevation-dp-24-canvas: #fff;
 	@include main.variables;
+	@include mixins.color-scheme(light);
 }
 
 #{variables.$scheme-alternate-selector} {
@@ -34,4 +35,5 @@
 	--vvd-scheme-elevation-dp-24-box-shadow: 0 12px 16px 4px rgba(0, 0, 0, 0.25), 0 24px 32px rgba(0, 0, 0, 0.25), 0 12px 48px rgba(0, 0, 0, 0.25);
 	--vvd-scheme-elevation-dp-24-canvas: #343434;
 	@include alternate.variables;
+	@include mixins.color-scheme(dark);
 }
