--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -1,11 +1,14 @@
 $side-drawer-padding: --side-drawer-padding;
 $side-drawer-inline-size: --side-drawer-inline-size;
+$side-drawer-block-size: --side-drawer-block-size;
 $side-drawer-z-index: --side-drawer-z-index;
 $side-drawer-background-color: --side-drawer-background-color;
+$side-drawer-color: --side-drawer-color;
 
 $z-index-default: 6;
 $padding-default: 16px;
 $inline-size-default: 280px;
+$block-size-default: 100vh;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
@@ -17,10 +20,15 @@ $inline-size-default: 280px;
 }
 
 .side-drawer {
+	position: fixed;
 	z-index: var(#{$side-drawer-z-index}, #{$z-index-default});
+	display: flex;
+	overflow: auto;
+	flex-direction: column;
 	flex-shrink: 0;
 	background-color: var(#{$side-drawer-background-color}, var(#{scheme-variables.$vvd-color-canvas}));
-	color: var(#{scheme-variables.$vvd-color-on-canvas});
+	block-size: var(#{$side-drawer-block-size}, #{$block-size-default});
+	color: var(#{$side-drawer-color}, var(#{scheme-variables.$vvd-color-on-canvas}));
 	inline-size: var(#{$side-drawer-inline-size}, #{$inline-size-default});
 
 	&.side-drawer--alternate {
@@ -49,29 +57,18 @@ $inline-size-default: 280px;
 
 .side-drawer--top-bar {
 	$gutter: var(#{$side-drawer-padding}-top-bar, #{$padding-default});
-	position: fixed;
-	display: flex;
-	box-sizing: border-box;
+	flex-shrink: 0;
 	align-items: center;
 	block-size: 64px;
-	inline-size: inherit;
 	padding-inline-end: #{$gutter};
 	padding-inline-start: #{$gutter};
 }
 
 .side-drawer--content {
 	$gutter: var(#{$side-drawer-padding}-body, #{$padding-default});
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	box-sizing: border-box;
-	inline-size: inherit;
 	overflow-y: auto;
 	padding-inline-end: #{$gutter};
 	padding-inline-start: #{$gutter};
-	.side-drawer--top-bar + & {
-		top: 64px;
-	}
 }
 
 .side-drawer--modal {
@@ -97,4 +94,8 @@ $inline-size-default: 280px;
 	left: 0;
 	background-color: var(#{scrim-mixins.$vvd-scrim--background-color});
 	opacity: var(#{scrim-mixins.$vvd-scrim--opacity});
+}
+
+.side-drawer--app-content {
+	margin-inline-start: var(#{$side-drawer-inline-size}, #{$inline-size-default});;
 }
