--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -1,34 +1,28 @@
-$side-drawer-padding: --side-drawer-padding;
-$side-drawer-inline-size: --side-drawer-inline-size;
-$side-drawer-block-size: --side-drawer-block-size;
-$side-drawer-z-index: --side-drawer-z-index;
-$side-drawer-background-color: --side-drawer-background-color;
-$side-drawer-color: --side-drawer-color;
-
-$z-index-default: 6;
-$padding-default: 16px;
-$inline-size: var(#{$side-drawer-inline-size}, 280px);
-$block-size: var(#{$side-drawer-block-size}, 100vh);
-
+@use 'partials/vwc-side-drawer-variables' as variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-foundation/scss/mixins/scrim' as scrim-mixins;
 
-// :host {
-// 	display: flex;
-// 	block-size: 100%;
-// }
+$z-index-default: 6;
+$padding-default: 16px;
+$inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
+
+
+:host {
+	display: flex;
+	block-size: 100vh;
+}
 
 .side-drawer {
 	position: fixed;
-	z-index: var(#{$side-drawer-z-index}, #{$z-index-default});
+	z-index: var(#{variables.$side-drawer-z-index}, #{$z-index-default});
 	display: flex;
 	overflow: auto;
 	flex-direction: column;
 	flex-shrink: 0;
-	background-color: var(#{$side-drawer-background-color}, var(#{scheme-variables.$vvd-color-canvas}));
-	block-size: #{$block-size};
-	color: var(#{$side-drawer-color}, var(#{scheme-variables.$vvd-color-on-canvas}));
+	background-color: var(#{variables.$side-drawer-background-color}, var(#{scheme-variables.$vvd-color-canvas}));
+	block-size: inherit;
+	color: var(#{variables.$side-drawer-color}, var(#{scheme-variables.$vvd-color-on-canvas}));
 	inline-size: #{$inline-size};
 
 	&.side-drawer--alternate {
@@ -67,7 +61,7 @@ $block-size: var(#{$side-drawer-block-size}, 100vh);
 // }
 
 .side-drawer--top-bar {
-	$gutter: var(#{$side-drawer-padding}-top-bar, #{$padding-default});
+	$gutter: var(#{variables.$side-drawer-padding-top-bar}, #{$padding-default});
 	flex-shrink: 0;
 	align-items: center;
 	block-size: 64px;
@@ -76,7 +70,7 @@ $block-size: var(#{$side-drawer-block-size}, 100vh);
 }
 
 .side-drawer--content {
-	$gutter: var(#{$side-drawer-padding}-body, #{$padding-default});
+	$gutter: var(#{variables.$side-drawer-padding-body}, #{$padding-default});
 	background-color: inherit;
 	overflow-y: auto;
 	padding-inline-end: #{$gutter};
