--- a/common/scheme/src/scheme.dark.scss
+++ b/common/scheme/src/scheme.dark.scss
@@ -4,7 +4,6 @@
 @use 'partials/scheme-variables' as variables;
 
 
-
 #{variables.$scheme-main-selector} {
 	--vvd-scheme-elevation-dp-2-box-shadow: 0 2px 1px 1px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px 4px rgba(0, 0, 0, 0.25);
 	--vvd-scheme-elevation-dp-2-canvas: #1c1c1c;
@@ -19,6 +18,7 @@
 	--vvd-scheme-elevation-dp-24-box-shadow: 0 12px 16px 4px rgba(0, 0, 0, 0.25), 0 24px 32px rgba(0, 0, 0, 0.25), 0 12px 48px rgba(0, 0, 0, 0.25);
 	--vvd-scheme-elevation-dp-24-canvas: #343434;
 	@include main.variables;
+	@include mixins.color-scheme(dark);
 }
 
 #{variables.$scheme-alternate-selector} {
@@ -35,4 +35,5 @@
 	--vvd-scheme-elevation-dp-24-box-shadow: 0 12px 16px rgba(0, 0, 0, 0.05), 0 24px 32px rgba(0, 0, 0, 0.05), 0 12px 48px rgba(0, 0, 0, 0.2);
 	--vvd-scheme-elevation-dp-24-canvas: #fff;
 	@include alternate.variables;
+	@include mixins.color-scheme(light);
 }
