chore(security): remove protocol-agnostic urls

--- a/common/fonts/src/vvd-fonts.scss
+++ b/common/fonts/src/vvd-fonts.scss
@@ -24,7 +24,7 @@
 	font-family: 'SpeziaWeb';
 	font-style: normal;
 	font-weight: 500;
-	src: url('//fonts.resources.vonage.com/fonts/v1/SpeziaWeb-WideMedium.woff2')
+	src: url('https://fonts.resources.vonage.com/fonts/v1/SpeziaWeb-WideMedium.woff2')
 		format('woff2');
 }
 
@@ -36,7 +36,7 @@
 	font-family: 'SpeziaWeb';
 	font-style: normal;
 	font-weight: 600;
-	src: url('//fonts.resources.vonage.com/fonts/v1/SpeziaWeb-SemiBold.woff2')
+	src: url('https://fonts.resources.vonage.com/fonts/v1/SpeziaWeb-SemiBold.woff2')
 		format('woff2');
 }
 
@@ -48,7 +48,7 @@
 	font-family: 'SpeziaMonoWeb';
 	font-style: normal;
 	font-weight: 400;
-	src: url('//fonts.resources.vonage.com/fonts/v1/SpeziaWeb-MonoRegular.woff2')
+	src: url('https://fonts.resources.vonage.com/fonts/v1/SpeziaWeb-MonoRegular.woff2')
 		format('woff2');
 }
 
@@ -63,7 +63,7 @@
 		font-stretch: 50% 200%;
 		font-style: normal;
 		font-weight: 1 1000;
-		src: url('//fonts.resources.vonage.com/fonts/v1/Spezia_Web_Complete_Upright.woff2')
+		src: url('https://fonts.resources.vonage.com/fonts/v1/Spezia_Web_Complete_Upright.woff2')
 			format('woff2-variations');
 	}
 
@@ -73,7 +73,7 @@
 		font-stretch: 50% 200%;
 		font-style: normal;
 		font-weight: 1 1000;
-		src: url('//fonts.resources.vonage.com/fonts/v1/Spezia_Web_Monospace_Complete.woff2')
+		src: url('https://fonts.resources.vonage.com/fonts/v1/Spezia_Web_Monospace_Complete.woff2')
 			format('woff2-variations');
 	}
 }
