--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -62,6 +62,8 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 
 .side-drawer--top-bar {
 	$gutter: var(#{variables.$side-drawer-padding-top-bar}, #{$padding-default});
+	@include typography.typography-cat-shorthand(subtitle-2);
+	display: flex;
 	flex-shrink: 0;
 	align-items: center;
 	block-size: 64px;
