--- a/ui-tests/assets/testPage.js.tmpl
+++ b/ui-tests/assets/testPage.js.tmpl
@@ -1,6 +1,6 @@
 import vvdCore from '@vonage/vvd-core';
 ${testImports}
-import { waitInterval } from '../../../test/test-helpers';
+import { waitInterval } from '../../../test/test-helpers.js';
 import '../../assets/testPage.css';
 
 const wrapper = document.createElement('div');
