--- a/common/foundation/scss/mixins/layout/_mixins.scss
+++ b/common/foundation/scss/mixins/layout/_mixins.scss
@@ -24,10 +24,10 @@ $all-layouts: (
 %outlined {
 	#{variables.$vvd-layout-color-fill}: transparent;
 	#{variables.$vvd-layout-color-outline}: var(#{connotation.$vvd-color-connotation});
-	@if config.$outline-duotone {
+	@if (config.$outline-duotone) {
 		#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation}-contrast);
 	} @else {
-		#{variables.$vvd-layout-color-text}: var(#{scheme-variables.$vvd-color-on-canvas});
+		#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation}-diverse);
 	}
 }
 
