--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -3,6 +3,7 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-foundation/scss/mixins/scrim' as scrim-mixins;
 
+
 $z-index-default: 6;
 $padding-default: 16px;
 $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
@@ -54,6 +55,7 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 
 .side-drawer--top-bar {
 	$gutter: var(#{variables.$side-drawer-padding-top-bar}, #{$padding-default});
+	@include typography.typography-cat-shorthand(subtitle-2);
 	display: flex;
 	flex-shrink: 0;
 	align-items: center;
