feat(vwc-inline): add more inline size options (#1053)

--- a/components/inline/src/vwc-inline.scss
+++ b/components/inline/src/vwc-inline.scss
@@ -2,60 +2,57 @@
 
 $items-min-inline-size-v-name: --items-min-inline-size;
 $items-spacing-v-name: --items-spacing;
-
-$inline-template: --inline-template;
+$gutters-v-name: --gutters;
+$auto-sizing: --auto-sizing;
 
 /* #region SIZE */
 $items-min-inline-sizes: (
-	'sm': 10rem,
-	'md': 20rem,
-	'lg': 30rem,
+	sm: 10rem,
+	md: 20rem,
+	lg: 30rem,
+);
+
+/* #region SPACEING */
+$items-spacings: (
+	xs: 16px,
+	md: 24px,
+	xl: 32px,
 );
 
 @each $key, $value in $items-min-inline-sizes {
-	:host([size='#{$key}'i]) {
+	.layout-column-basis-#{$key} {
 		#{$items-min-inline-size-v-name}: $value;
 	}
 }
-/* #endregion */
-
-/* #region SPACING */
-$items-spacings: (
-	// ! hardcoded values should be defined and auto-generated to, and by, design tokens
-	'sm': 24px,
-	'md': 32px
-);
 
 @each $key, $value in $items-spacings {
-	:host([spacing='#{$key}'i]) {
+	.layout-column-spacing-#{$key} {
 		#{$items-spacing-v-name}: $value;
 	}
+	.layout-gutters-#{$key} {
+		#{$gutters-v-name}: $value;
+	}
 }
-/* #endregion */
 
-:host {
+.layout {
 	display: grid;
-	width: 100%;
+	margin: var(#{$gutters-v-name}, #{map.get($items-spacings, 0)});
 	gap: var(#{$items-spacing-v-name}, #{map.get($items-spacings, md)});
 	grid-auto-rows: min-content;
 	grid-template-columns: repeat(
-		var(#{$inline-template}),
-		minmax(
-			var(
-				#{$items-min-inline-size-v-name},
-				#{map.get($items-min-inline-sizes, lg)}
-			),
-			1fr
-		)
+		var(#{$auto-sizing}),
+		minmax(var(#{$items-min-inline-size-v-name}, #{map.get($items-min-inline-sizes, lg)}), 1fr)
 	);
-	inline-size: 100%;
-}
 
-:host(:not(template)),
-:host([template="fit"i]) {
-	#{$inline-template}: auto-fit;
-}
+	&:not(.layout-auto-sizing-fill),
+	&.layout-auto-sizing-fit {
+		#{$auto-sizing}: auto-fit;
+	}
+	&.layout-auto-sizing-fill {
+		#{$auto-sizing}: auto-fill;
+	}
 
-:host([template="fill"i]) {
-	#{$inline-template}: auto-fill;
+	&.layout-column-basis-block {
+		grid-template-columns: 1fr;
+	}
 }
