--- a/components/layout/src/vwc-layout.scss
+++ b/components/layout/src/vwc-layout.scss
@@ -36,7 +36,7 @@ $items-spacings: (
 
 .layout {
 	display: grid;
-	margin: var(#{$gutters-v-name}, #{map.get($items-spacings, 0)});
+	margin: var(#{$gutters-v-name}, 0);
 	gap: var(#{$items-spacing-v-name}, #{map.get($items-spacings, md)});
 	grid-auto-rows: min-content;
 	grid-template-columns: repeat(
