--- a/components/layout/src/vwc-layout.scss
+++ b/components/layout/src/vwc-layout.scss
@@ -9,7 +9,7 @@
 	grid-auto-rows: min-content;
 
 	@include mixins.measurement(map.keys(variables.$bases)...) using ($basis) {
-		#{functions.get-selector-with-default('.layout-column-basis', $basis, md, map.keys(variables.$bases))} {
+		#{functions.get-selector-with-default(".layout-column-basis", $basis, md, map.keys(variables.$bases))} {
 			grid-template-columns: repeat(
 				var(#{variables.$layout-auto-sizing}),
 				minmax(map.get(variables.$bases, $basis), 1fr)
@@ -18,7 +18,7 @@
 	}
 
 	@include mixins.measurement(map.keys(variables.$spaces)...) using ($space) {
-		#{functions.get-selector-with-default('.layout-column-spacing', $space, md, map.keys(variables.$spaces))} {
+		#{functions.get-selector-with-default(".layout-column-spacing", $space, md, map.keys(variables.$spaces))} {
 			gap: map.get(variables.$spaces, $space);
 		}
 	}
@@ -30,7 +30,7 @@
 	}
 
 	@include mixins.measurement(map.keys(variables.$auto-sizes)...) using ($size) {
-		#{functions.get-selector-with-default('.layout-auto-sizing', $size, fit, map.keys(variables.$auto-sizes))} {
+		#{functions.get-selector-with-default(".layout-auto-sizing", $size, fit, map.keys(variables.$auto-sizes))} {
 			#{variables.$layout-auto-sizing}: map.get(variables.$auto-sizes, $size);
 		}
 	}
